added index view for links & fixed short id logic

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <h2>Welcome to 'u'</h2>
 <h3>Short for uRL Shortener</h3>
 <%= link_to('Shorten Your Link!', new_link_path) %>
+<%= link_to('Recent Links', links_path) %>
