--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,7 @@ railsthemes.com/terms. -->
 <head>
   <meta charset="utf-8" />
   <title>
-    Meta:
-    <%= title = (yield :title); title.blank? ? "" : title %>
+    <%= title = (yield :title); title.blank? ? "'u'RL" : title %>
   </title>
   <!-- Set the viewport width to device width for mobile -->
   <meta content="width=device-width" name="viewport" />
